keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --import-realm
          image: quay.io/keycloak/keycloak:23.0.6
          livenessProbe:
            exec:
              command:
                - /opt/keycloak/bin/kc.sh
                - show-config
            failureThreshold: 15
            initialDelaySeconds: 180
            periodSeconds: 45
            timeoutSeconds: 20
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/keycloak/data/import/realm.json
              name: keycloak-cm0
              subPath: realm.json
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: keycloak-realm-export.json
                path: realm.json
            name: keycloak-cm0
          name: keycloak-cm0
