ospo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: ospo-app
  name: ospo-app
spec:
  ports:
    - name: "4576"
      port: 4576
      targetPort: 4576
  selector:
    io.kompose.service: ospo-app
